# MIMO_GEOMETRY_ANALYSIS

./: .gitignore  ALSS_FRAMEWORK_COMPLETE.md  ALSS_II_QUICK_START.md  COMMIT_MIGRATION.md  CONTRIBUTING.md  COPRIME_ARRAYS_USAGE_GUIDE.md  DOCUMENTATION_COMPLETE.md  FINAL_ANSWER.md  FINAL_SUMMARY.md  GAP_ANALYSIS_SUMMARY.md  GIT_COMMIT_PLAN.md  HOW_TO_RUN_PLOTS.md  LICENSE  MIGRATION_GUIDE.md  PACKAGE_SUMMARY.md  PAPER_READY_MATERIALS.md  PAPER_VERIFICATION_REPORT.md  PUBLICATION_WORKFLOW.md  QUICK_ACTION_ITEMS.md  QUICK_REFERENCE.md  README.md  README_NEW.md  RESTRUCTURE_COMPLETE.md  RUN_PLOTS_GUIDE.txt  STATUS_AND_HELP.md  activate_venv.bat  activate_venv.ps1  cleanup_garbage_simple.ps1  commit_all.ps1  commit_migration.ps1  project_structure.txt  project_tree.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_benchmarks_with_venv.ps1  run_headline_smoke.ps1  setup.py  summarize_headline.ps1  test_files.txt  (+6 more)
.github/: copilot-instructions.md
algorithms/: coarray_music.py
analysis_scripts/: CORE_INVENTORY.md  analyze_alss_mcm_baseline.py  analyze_alss_mcm_enhanced.py  analyze_alss_mcm_scenarios.py  check_all_geometries.py  compare_all_arrays.py  compare_mcm_effects.py  debug_kmax.py  debug_music.py  extract_wcsa_pdf.py  generate_paper_data.py  generate_paper_data_final.py  graphical_demo.py  interpret_mcm_discrepancy.py  methods_demo.py  plot_benchmarks.py  print_mcm_summary.py  quick_doa_test.py  run_ablation_study.py  run_benchmarks.py  run_doa_demo.py  run_epca_demo.py  run_nested_01.py  run_nested_demo.py  run_nested_demo_.py  run_ula_01.py  run_ula_demo.py  run_z1_demo.py  run_z1_demo_.py  run_z3_1_demo.py  run_z3_1_demo_.py  run_z3_2_demo.py  run_z4_demo.py  run_z4_demo_.py  run_z4_z5_sweep.ps1  run_z5_01.py  run_z5_demo.py  run_z5_demo_.py  run_z6_demo.py  run_z6_demo_.py  (+7 more)
data/: README.md
doa_estimation/: DOA_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  __init__.py  metrics.py  music.py  simulation.py  visualization.py
docs/: ALSS_II_README.md  API_REFERENCE.md  BENCHMARK_EXECUTION_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  EXTENDED_METRICS_GUIDE.md  GETTING_STARTED.md  MCM_IMPLEMENTATION_SUMMARY.md  METRICS_GUIDE.md  METRICS_IMPLEMENTATION_SUMMARY.md  METRICS_QUICK_REFERENCE.md  MUTUAL_COUPLING_GUIDE.md  Technical_Proposal_Roadmap.tex  VENV_ACTIVATION_SUMMARY.md  alss_parameter_selection_decision.md  alss_parameter_selection_protocol.md  experiment_summary.md  paper1_conceptual_figure_plan.md  paper_audit.md  paper_to_code_map.md  rebuild_plan.md  reproduction_guide.md  (+4 more)
examples/: basic_example.py  (+1 more)
(+332 files in other folders)
