[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimo-geom-analysis"
version = "0.0.0"
description = "MIMO array geometry analysis and ALSS implementation"
authors = [ { name = "Hossein Molhem" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[project.dependencies]
numpy = "^1.21"
pandas = "^1.3"
matplotlib = "^3.5"
scipy = "^1.7"

[tool.setuptools.packages.find]
where = ["src"]
