[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimo-geom-analysis"
version = "0.0.0"
description = "MIMO array geometry analysis and ALSS implementation"
authors = [ { name = "Hossein Molhem" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[project.dependencies]
numpy = "^1.21"
pandas = "^1.3"
matplotlib = "^3.5"
scipy = "^1.7"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Keep linting fast and focused on common Python issues and import sorting.
line-length = 120
target-version = "py311"
select = ["E", "F", "I"]
ignore = []
exclude = [
	".git",
	"envs",
	"mimo-geom-dev",
	"archives",
	"results",
	"build",
	"dist",
	"__pycache__",
]

[tool.ruff.isort]
known-first-party = ["geometry_processors", "core", "analysis_scripts", "tools"]
